--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,8 +1,9 @@
 name: Terraform
-on: push
+on:
+  push:
+    branches: [ master ]
 jobs:
   terraform:
-    name: 'Terraform'
     runs-on: 'ubuntu-latest'
     container:
       image: centos:latest
